add_library(heaptree INTERFACE heaptree.hpp)

# add_library(heaptree heaptree.cpp heaptree.hpp)

# set_property(TARGET heaptree PROPERTY CXX_STANDARD 20)

# target_include_directories(heaptree PUBLIC
#   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
#   $<INSTALL_INTERFACE:include>
# )

#install(TARGETS heaptree)
